# Deep-Research

./: .env.example  .gitignore  README.md  pyproject.toml
config/: model_config.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ArtifactFrame.tsx  AuthModal.tsx  ChatInput.tsx  DAGInline.tsx  DAGView.tsx  FollowUpChat.tsx  HistoryList.tsx  MessageBubble.tsx  QueryInput.tsx  ReasoningPanel.tsx  ReasoningView.tsx  ReportView.tsx  ShareModal.tsx  Sidebar.tsx  SourceCard.tsx  TemplateSelector.tsx  UserMenu.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useAuth.ts  useHistory.ts  useResearch.ts
frontend/src/pages/: SharedView.tsx
frontend/src/styles/: globals.css
src/deep_research/: __init__.py  main.py
src/deep_research/agents/: __init__.py  critic.py  distiller.py  planner.py  reader.py  searcher.py  synthesizer.py  validator.py  web_agent.py
src/deep_research/api/: __init__.py  app.py  auth_routes.py  routes.py  share_routes.py  sse.py  template_routes.py
src/deep_research/auth/: __init__.py  jwt.py  middleware.py  passwords.py
src/deep_research/dag/: __init__.py  builder.py  engine.py  nodes.py
src/deep_research/db/: __init__.py  client.py  memory.py  schema.sql  sessions.py  shares.py  templates.py  users.py
src/deep_research/moe/: __init__.py  classifier.py  router.py
src/deep_research/pipeline/: research_pipeline.py
src/deep_research/prompts/: critic.md  (+7 more)
tests/: test_agents.py  test_api.sh  test_backend.py  test_dag_engine.py  test_moe.py  test_pipeline.py  test_tools.py
(+13 files in other folders)
